# ImageMerger

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
src/: bmp.cpp  bmp.h  image_merger.cpp  image_merger.h  main.cpp
